# logs-interceptor-python

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.venv310/: pyvenv.cfg
examples/: basic_app.py  fastapi_integration.py  full_config_reference.py  high_volume.py  tracking_usage.py
scripts/: publish.sh
src/logs_interceptor/: __init__.py  config.py  preload.py  types.py  utils.py
src/logs_interceptor/application/: __init__.py  config_service.py  log_service.py
src/logs_interceptor/domain/: __init__.py  entities.py  interfaces.py  value_objects.py
src/logs_interceptor/infrastructure/: __init__.py  internal_capture_guard.py  log_noise_filter.py  log_record_extra.py
src/logs_interceptor/infrastructure/buffer/: __init__.py  memory_buffer.py
src/logs_interceptor/infrastructure/circuit_breaker/: circuit_breaker.py
src/logs_interceptor/infrastructure/compression/: __init__.py  base.py  brotli_compressor.py  factory.py  gzip_compressor.py  noop_compressor.py
src/logs_interceptor/infrastructure/context/: __init__.py  context_provider.py
src/logs_interceptor/infrastructure/dlq/: __init__.py  file_dlq.py  memory_dlq.py
src/logs_interceptor/infrastructure/filter/: __init__.py  log_filter.py
src/logs_interceptor/infrastructure/interceptors/: __init__.py  runtime_interceptor.py
src/logs_interceptor/infrastructure/memory/: __init__.py  memory_tracker.py
src/logs_interceptor/infrastructure/metrics/: metrics_collector.py
src/logs_interceptor/infrastructure/transport/: __init__.py  loki_json_transport.py  loki_protobuf_transport.py  resilient_transport.py  transport_factory.py
src/logs_interceptor/infrastructure/workers/: __init__.py  worker_pool.py
src/logs_interceptor/integrations/: __init__.py  celery.py  django.py  fastapi.py  flask.py  logging_handler.py  loguru.py  structlog.py
src/logs_interceptor/presentation/: __init__.py  factory.py
test-apps/elven-live-demo/: .env.example  README.md  app.py
test-apps/elven-observability-smoke/: .env.example  README.md  app.py  run.sh
tests/integration/: test_api.py
tests/unit/: test_circuit_breaker_extra.py  test_config_service.py  test_core_components.py  test_env_config.py  test_integration_filters.py  test_log_filter_extra.py  test_log_service_unit.py  test_loguru_sink.py  test_loki_json_transport.py  test_memory_buffer_extra.py  test_protobuf_transport_safety.py  test_resilient_transport.py  test_runtime_interceptor.py  test_utils_extra.py
