[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "elven-logs-interceptor-python"
version = "0.1.2"
description = "Production-grade logs interceptor for Python with Loki transport, resilience, batching, and framework integrations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Elven Observability" }
]
keywords = [
  "logs",
  "loki",
  "observability",
  "logging",
  "interceptor",
  "clean-architecture",
  "resilience"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: System :: Logging",
]
dependencies = [
  "httpx>=0.27.0",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
perf = [
  "orjson>=3.10.0",
  "protobuf>=5.0.0",
  "python-snappy>=0.7.1",
  "brotli>=1.1.0",
]
otel = [
  "opentelemetry-api>=1.24.0",
]
fastapi = [
  "fastapi>=0.111.0",
  "starlette>=0.37.0",
]
django = [
  "django>=4.2",
]
flask = [
  "flask>=3.0.0",
]
celery = [
  "celery>=5.4.0",
]
structlog = [
  "structlog>=24.0.0",
]
loguru = [
  "loguru>=0.7.2",
]
all = [
  "orjson>=3.10.0",
  "protobuf>=5.0.0",
  "python-snappy>=0.7.1",
  "brotli>=1.1.0",
  "opentelemetry-api>=1.24.0",
  "fastapi>=0.111.0",
  "starlette>=0.37.0",
  "django>=4.2",
  "flask>=3.0.0",
  "celery>=5.4.0",
  "structlog>=24.0.0",
  "loguru>=0.7.2",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "build>=1.2.2",
  "twine>=5.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/logs_interceptor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --cov=logs_interceptor.application.config_service --cov=logs_interceptor.application.log_service --cov=logs_interceptor.infrastructure.buffer.memory_buffer --cov=logs_interceptor.infrastructure.circuit_breaker.circuit_breaker --cov=logs_interceptor.infrastructure.filter.log_filter --cov=logs_interceptor.infrastructure.transport.resilient_transport --cov=logs_interceptor.infrastructure.transport.loki_json_transport --cov=logs_interceptor.utils --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "W",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "celery.*",
  "django.*",
  "flask.*",
  "structlog.*",
  "loguru.*",
  "starlette.*",
  "fastapi.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "logs_interceptor.integrations.celery",
  "logs_interceptor.integrations.flask",
]
disable_error_code = ["untyped-decorator"]
